--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
         <h1>Valeria Gutierrez</h1>
         <p>Este es mi perfil</p> 
     </header>
+    <nav> 
 
+    </nav>
 
 </body>
 </html>
