--- a/index.html
+++ b/index.html
@@ -25,10 +25,24 @@
     <main>
         <section id="resumen">
             <h2>Resumen</h2>
-            <p> Soy Valeria Gutierrez</p>
+            <p> Estudiante de Ingeniería en Computación en la
+                Escuela Superior Politécnica del Litoral (ESPOL),
+                con interés en desarrollo de software, seguridad
+                informática y Frontend - diseño de interfaces (UX/UI). Me
+                motiva crear soluciones digitales seguras,
+                funcionales e intuitivas, que aporten valor a los
+                usuarios y fortalezcan la innovación tecnológica. </p>
         </section>
-        <section id="educacion">
+         <section class="sb educacion">
             <h2>Educación</h2>
+            <p class="sbsubtitulo">Bachillerato:</p>
+            <p>Unidad Educativa Transito Amaguaña - Bachiller
+                en Ciencias
+            </p>
+            <p class="sbsubtitulo">Universidad:</p>
+            <p>Escuela Superior Politécnica del Litoral (ESPOL)</p>
+
+            </p
         </section>
         <section id="habilidades">
             <h2>Habilidades</h2>
