--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <p>Ing. Computación | vaniguti@espol.edu.ec | 0960453531</p>
         <figure style="margin:0; display:flex; justify-content:center;">
             <a href="Foto profesional.png" target="_blank" rel="noopener">
-                <img id= "photo" src="Foto profesional.png" alt="Foto de perfil de Valeria Gutierrez">
+                <img id="photo" src="Foto profesional.png" alt="Foto de perfil de Valeria Gutierrez">
             </a>
         </figure>
     </header>
@@ -23,7 +23,7 @@
             <li><a href="#resumen">Resumen</a></li>
             <li><a href="#educacion">Educación</a></li>
             <li><a href="#habilidades">Habilidades</a></li>
-            <li><a href="#formacion-adicional">Formacion adicional</a></li>
+            <li><a href="#formacion adicional">Formacion adicional</a></li>
             <li><a href="#proyectos">Proyectos</a></li>
 
         </ul>
@@ -31,7 +31,7 @@
 
     <main>
         <section id="resumen">
-            <h2 class = "subtitle"> Resumen</h2>
+            <h2 class="subtitle"> Resumen</h2>
             <p> Estudiante de Ingeniería en Computación en la
                 Escuela Superior Politécnica del Litoral (ESPOL),
                 con interés en desarrollo de software, seguridad
@@ -43,13 +43,13 @@
             </p>
         </section>
         <section id="educacion">
-            <h2 class = "subtitle"> Educación</h2>
+            <h2 class="subtitle"> Educación</h2>
             <p><strong>Bachiller en Ciencias:</strong> Unidad Educativa Fiscal “Tránsito Amaguaña”, Guayaquil.</p>
             <p><strong>Universitaria (may 2021 – presente):</strong> Escuela Superior Politécnica del Litoral (ESPOL),
                 Guayaquil.</p>
         </section>
         <section id="habilidades">
-            <h2 class = "subtitle">Habilidades</h2>
+            <h2 class="subtitle">Habilidades</h2>
             <ol>
                 <li><strong>Lenguajes:</strong> Python, Java, JavaScript, PHP, HTML5, CSS, SQL, Go</li>
                 <li><strong>Frameworks/Librerías:</strong> React, Vue.js, Node.js</li>
@@ -61,7 +61,7 @@
             </ol>
         </section>
         <section id="formacion adicional">
-            <h2 class = "subtitle">Formación adicional</h2>
+            <h2 class="subtitle">Formación adicional</h2>
             <ul>
                 <li>CCNA2 — Switching, Routing and Wireless Essentials (Cisco)</li>
                 <li>Curso Cisco Java — Programación orientada a objetos</li>
@@ -70,7 +70,7 @@
         </section>
 
         <section id="proyectos" aria-labelledby="proyectos-titulo">
-            <h2 class = "subtitle" id="proyectos-titulo">Proyectos</h2>
+            <h2 class="subtitle" id="proyectos-titulo">Proyectos</h2>
             <table aria-describedby="proyectos-titulo">
                 <thead>
                     <tr>
@@ -105,8 +105,8 @@
         </section>
         </section>
 
-        <section id="testimonios" aria-labelledby="testimonios-titulo">
-            <h2 class = "subtitle" id="testimonios-titulo">Testimonios de colaboración en CNT</h2>
+        <section id="testimonios" >
+            <h2 class="subtitle" >Testimonios de colaboración en CNT</h2>
 
             <article aria-labelledby="t1-nombre">
                 <header>
@@ -170,7 +170,7 @@
         </section>
 
         <section id="multimedia">
-            <h2 class = "subtitle">Mapa</h2>
+            <h2 class="subtitle">Mapa</h2>
             <div class="media">
 
                 <figure>
@@ -184,12 +184,10 @@
                 </figure>
         </section>
         <section id="contacto">
-            <h2 class = "subtitle" >Contactarme</h2>
+            <h2 class="subtitle">Contactarme</h2>
 
             <form action="#" method="post">
                 <fieldset>
-                    <legend>Tus datos</legend>
-
                     <label for="nombre">Nombre</label>
                     <input id="nombre" name="nombre" type="text" placeholder="Tu nombre" required>
 
@@ -198,8 +196,6 @@
                 </fieldset>
 
                 <fieldset>
-                    <legend>Motivo</legend>
-
                     <label for="motivo">Selecciona una opción</label>
                     <select id="motivo" name="motivo" required>
                         <option value="" disabled selected>Elige</option>
@@ -211,14 +207,11 @@
                 </fieldset>
 
                 <fieldset>
-                    <legend>Preferencia de contacto</legend>
-
                     <label><input type="radio" name="preferencia" value="email" checked> Email</label>
                     <label><input type="radio" name="preferencia" value="telefono"> Teléfono</label>
                 </fieldset>
 
                 <fieldset>
-                    <legend>Mensaje</legend>
                     <textarea id="mensaje" name="mensaje" rows="4" placeholder="Escribe tu mensaje"></textarea>
                 </fieldset>
 
