--- a/index.html
+++ b/index.html
@@ -81,25 +81,36 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <th scope="row">EcoWarning</th>
+                        <th scope="row">
+                            <a class="project-link" href="https://github.com/Dalay20/EcoWarning/tree/main"
+                                target="_blank" rel="noopener">EcoWarning</a>
+                        </th>
                         <td>PHP, Vue 3, Vite, Vue Router</td>
                         <td>Plataforma para reportar incidentes forestales en Ecuador con énfasis en rapidez de registro
                             y consulta pública.</td>
                     </tr>
                     <tr>
-                        <th scope="row">LexicAnalizerGo</th>
+                        <th scope="row">
+                            <a class="project-link" href="https://github.com/JamesIGT/LexicAnalizerGO" target="_blank"
+                                rel="noopener">LexicAnalizerGo</a>
+                        </th>
                         <td>Python, PLY</td>
                         <td>Analizador léxico, sintáctico y semántico para código Golang con reglas y reporte de
                             errores.</td>
                     </tr>
                     <tr>
-                        <th scope="row">Agenda de contactos</th>
+                        <th scope="row">
+                            <a class="project-link" href="https://github.com/GenesisMichilena/Grupo-9" target="_blank"
+                                rel="noopener">Agenda de contactos</a>
+                        </th>
                         <td>Java, SQLite</td>
                         <td>Gestión de contactos (nombre, número, foto y dirección) con interfaz de escritorio.</td>
                     </tr>
-                    </tr>
                     <tr>
-                        <th scope="row">ExpressDoor</th>
+                        <th scope="row">
+                            <a class="project-link" href="https://expressdoor05.wixsite.com/expressdoor" target="_blank"
+                                rel="noopener">ExpressDoor</a>
+                        </th>
                         <td>Wix, CSS</td>
                         <td>Landing page oficial de la empresa ExpressDoor - servicio de viaje puerta a puerta para
                             lograr fortalecer su presencia digial.</td>
