--- a/index.html
+++ b/index.html
@@ -81,21 +81,39 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <th scope="row">EcoWarning</th>
+                        <th scope="row">
+                            <a class="project-link" href="https://github.com/Dalay20/EcoWarning/tree/main"
+                                target="_blank" rel="noopener">EcoWarning</a>
+                        </th>
                         <td>PHP, Vue 3, Vite, Vue Router</td>
                         <td>Plataforma para reportar incidentes forestales en Ecuador con énfasis en rapidez de registro
                             y consulta pública.</td>
                     </tr>
                     <tr>
-                        <th scope="row">LexicAnalizerGo</th>
+                        <th scope="row">
+                            <a class="project-link" href="https://github.com/JamesIGT/LexicAnalizerGO" target="_blank"
+                                rel="noopener">LexicAnalizerGo</a>
+                        </th>
                         <td>Python, PLY</td>
                         <td>Analizador léxico, sintáctico y semántico para código Golang con reglas y reporte de
                             errores.</td>
                     </tr>
                     <tr>
-                        <th scope="row">Agenda de contactos</th>
+                        <th scope="row">
+                            <a class="project-link" href="https://github.com/GenesisMichilena/Grupo-9" target="_blank"
+                                rel="noopener">Agenda de contactos</a>
+                        </th>
                         <td>Java, SQLite</td>
                         <td>Gestión de contactos (nombre, número, foto y dirección) con interfaz de escritorio.</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">
+                            <a class="project-link" href="https://expressdoor05.wixsite.com/expressdoor" target="_blank"
+                                rel="noopener">ExpressDoor</a>
+                        </th>
+                        <td>Wix, CSS</td>
+                        <td>Landing page oficial de la empresa ExpressDoor - servicio de viaje puerta a puerta para
+                            lograr fortalecer su presencia digial.</td>
                     </tr>
                 </tbody>
             </table>
@@ -105,66 +123,28 @@
         </section>
         </section>
 
-        <section id="testimonios" >
-            <h2 class="subtitle" >Testimonios de colaboración en CNT</h2>
+        <section id="testimonios">
+            <h2 class="subtitle">Testimonios de proyectos</h2>
 
             <article aria-labelledby="t1-nombre">
                 <header>
-                    <h3 id="t1-nombre">Ana Belén Torres</h3>
-                    <p><em>Jefa de Proyectos de Redes — CNT EP</em></p>
+                    <h3 id="t1-nombre">Rosa Padilla</h3>
+                    <p><em>Jefa de ExpressDoor</em></p>
                 </header>
 
                 <blockquote>
-                    <p>“Valeria destaca por su capacidad de integrar soluciones técnicas con una comunicación clara y
-                        organizada.”</p>
+                    <p>“Gracias al trabajo de Valeria, logramos mostrar la esencia de nuestro emprendimiento en una
+                        plataforma moderna, atractiva y fácil de navegar.”</p>
                     <footer>
-                        <cite>Ana Belén Torres, CNT EP</cite>
+                        <cite>Rosa Padilla, Jefa de ExpressDoor</cite>
                     </footer>
                 </blockquote>
 
                 <p>
-                    En la optimización del backbone de fibra óptica de CNT, lideró la automatización del monitoreo y la
-                    estandarización de documentación técnica, mejorando la eficiencia entre los equipos de red y
-                    desarrollo.
-                </p>
-            </article>
+                    Valeria desarrolló la landing page de ExpressDoor para fortalecer su presencia digital. El sitio
+                    centraliza la información del emprendimiento y facilita llegar a una audiencia más amplia mediante
+                    un diseño coherente, atractivo y funcional, mejorando la comunicación y el alcance de la marca.
 
-
-            <article aria-labelledby="t2-nombre">
-                <header>
-                    <h3 id="t2-nombre">Marco Vinicio Loor</h3>
-                    <p><em>Líder de Innovación Digital — CNT EP</em></p>
-                </header>
-
-                <blockquote>
-                    <p>“Tiene una visión práctica y escalable al desarrollar soluciones tecnológicas.”</p>
-                    <footer>
-                        <cite>Marco Vinicio Loor, CNT EP</cite>
-                    </footer>
-                </blockquote>
-
-                <p>
-                    Durante el programa de automatización de procesos, implementó un sistema de analítica para priorizar
-                    tickets y diseñó tableros interactivos que optimizaron la toma de decisiones basada en datos.
-            </article>
-
-
-            <article aria-labelledby="t3-nombre">
-                <header>
-                    <h3 id="t3-nombre">Gabriela Cedeño</h3>
-                    <p><em>Coordinadora de Experiencia de Cliente — CNT EP</em></p>
-                </header>
-
-                <blockquote>
-                    <p>“Combina conocimientos técnicos con empatía hacia el usuario.”</p>
-                    <footer>
-                        <cite>Gabriela Cedeño, CNT EP</cite>
-                    </footer>
-                </blockquote>
-
-                <p>
-                    Colaboró en el rediseño de flujos de autoservicio, mejorando la interfaz y la validación de
-                    formularios. Su enfoque en la usabilidad redujo errores y aumentó la satisfacción del cliente.
                 </p>
             </article>
         </section>
