--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                             <a class="project-link" href="https://github.com/Dalay20/EcoWarning/tree/main"
                                 target="_blank" rel="noopener">EcoWarning</a>
                         </th>
-                        <td>PHP, Vue 3, Vite, Vue Router</td>
+                        <td>PHP, Vue 3, Vite</td>
                         <td>Plataforma para reportar incidentes forestales en Ecuador con énfasis en rapidez de registro
                             y consulta pública.</td>
                     </tr>
